# graphs

./: .gitignore  README.md  pyproject.toml
desalination/: desalination.py
kantrowitz/: duct.ipynb
notebooks/: cost_structure.ipynb  desalination.ipynb  duct.ipynb  electrochem.ipynb  h2.ipynb  h2_catalysis.ipynb  hx.ipynb  matflows.ipynb
src/graphs/: __init__.py  default.mplstyle  plotutils.py
src/graphs/kantrowitz/: gas.py
