[project]
authors = [{name = "Liem Dam-Quang", email = "liem.dam-quang@mail.mcgill.ca"}]
dependencies = []
description = "Add a short description here"
name = "graphs"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
graphs = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
matplotlib = ">=3.10.0,<4"
coolprop = ">=6.6.0,<7"
numpy = ">=2.2.1,<3"
scipy = ">=1.14.1,<2"
