[project]
authors = [{name = "Liem Dam-Quang", email = "liem.dam-quang@mail.mcgill.ca"}]
description = "Various scripts and calculations for blog posts and other stuff"
name = "graphs"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["palettable>=3.3.3,<4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
graphs = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
matplotlib = ">=3.10.0,<4"
coolprop = ">=6.6.0,<7"
numpy = ">=2.2.1,<3"
scipy = ">=1.14.1,<2"
pint = ">=0.24.4,<0.25"
ipykernel = ">=6.29.5,<7"
pip = ">=25.0,<26"
numpy-financial = ">=1.0.0,<2"
pandas = ">=2.3.0,<3"

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.hatch.build.targets.wheel]
packages = ["src/graphs"]
